# ODPlatform

./: .gitignore  ODPlatform_命令速查.md  ODPlatform_学习指南.md  ODPlatform_架构师讲解文稿.md  README.md
apps/platform/: pyproject.toml
apps/platform/configs/: rsod_best_check_config.yaml  rsod_best_fixed_config.yaml  train_config.yaml
apps/platform/configs/datasets/: rsod.yaml
apps/platform/src/odp_platform/cli/: val.py
apps/platform/src/odp_platform/inference/: service.py
apps/platform/src/odp_platform/inference/frame_source/: factory.py
apps/platform/src/odp_platform/webui/: app.py  experiment_viz.py  llm_agent.py  training_tab.py  user_tabs.py
apps/web-backend/: README.md  hooks.py  main.py  requirements.txt  schemas.py
apps/web-backend/api/: auth.py  detection.py  experiments.py  llm.py  models.py  models_api.py  users_api.py  validation.py
apps/web-backend/db/: database.py  init_db.py
docs/: ODPlatform_AI接手指南.md  ODPlatform_团队协作指南.md
